@@ -6,7 +6,6 @@ package io.github.genomicdatainfrastructure.daam.services;
 
 import io.github.genomicdatainfrastructure.daam.exceptions.CatalogueItemNotFoundException;
 import io.github.genomicdatainfrastructure.daam.model.CreateApplication;
-import io.github.genomicdatainfrastructure.daam.remote.rems.model.CatalogueItem;
 import io.github.genomicdatainfrastructure.daam.remote.rems.api.RemsApplicationCommandApi;
 import io.github.genomicdatainfrastructure.daam.gateways.RemsApiQueryGateway;
 import io.github.genomicdatainfrastructure.daam.remote.rems.model.CreateApplicationCommand;
@@ -18,8 +17,6 @@ import org.eclipse.microprofile.rest.client.inject.RestClient;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
-import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class CreateApplicationService {
@@ -50,33 +47,30 @@ public class CreateApplicationService {
     }
 
     private List<Long> getCatalogueItemIds(List<String> datasetIds, String userId) {
-        List<CompletableFuture<Long>> futures = datasetIds.stream()
+        var futures = datasetIds.stream()
                 .map(datasetId -> fetchCatalogueItemIdAsync(userId, datasetId))
                 .toList();
 
-        List<Long> result;
         try {
-            result = futures.stream()
+            return futures.stream()
                     .map(CompletableFuture::join)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (CompletionException e) {
-            if (e.getCause() instanceof CatalogueItemNotFoundException) {
-                throw (CatalogueItemNotFoundException) e.getCause();
+            if (e.getCause() instanceof RuntimeException runtimeException) {
+                throw runtimeException;
             }
 
-            throw e;
+            throw new RuntimeException(e.getCause());
         }
-
-        return result;
     }
 
     private CompletableFuture<Long> fetchCatalogueItemIdAsync(String userId, String datasetId) {
         return CompletableFuture.supplyAsync(() -> {
-            CatalogueItem item = gateway.retrieveCatalogueItemByResourceId(userId, datasetId);
+            var item = gateway.retrieveCatalogueItemByResourceId(userId, datasetId);
             if (item == null) {
                 throw new CatalogueItemNotFoundException(datasetId);
             }
-            return item.getCatalogueItemId();
+            return item.getId();
         });
     }
 }
